# ge-tracker

./: .env  .gitignore  Cargo.toml  package-lock.json  package.json
migrations/: 20240828025444_init.sql
public/css/: main.css  main.css.map
scss/: main.scss
src/: main.rs
src/repo/: sql.rs
src/repo/data/: mod.rs  osrs.rs
src/routes/: crafting.rs  highalch.rs  index.rs  lowalch.rs  mod.rs
templates/: base.html  crafting.html  highalch.html  index.html  lowalch.html
